feat: update before migration

--- a/documents/dummy.ipynb
+++ b/documents/dummy.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Dog object at 0x000001B2C29D5988>\n",
+      "Dog Name: nu_rung2\n",
+      "<__main__.Dog object at 0x000001B2C29D5B08>\n",
+      "Dog Name: hin_dung2\n"
+     ]
+    }
+   ],
    "source": [
     "    class Dog:\n",
     "        def __init__(self, name):\n",
@@ -35,7 +46,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.7.9 (tags/v3.7.9:13c94747c7, Aug 17 2020, 16:30:00) [MSC v.1900 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
